# toy-genome-browser

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
src/: lib.rs  main.rs  preprocessing.rs  search.rs  structures.rs  wasm_structures.rs
www/: index.html  package.json  vite.config.js
www/src/: browser.js  canvas.js  main.js  mm39-chrom-sizes.json  style.css  utils.js
