[package]
name = "genome-browser-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.64"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
bincode = "1.3"
web-sys = { version = "0.3.91", features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "Window"]}
js-sys = "0.3.91"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
